Actually fix margin instead of removing horizontal scroll

--- a/cloudresweb/styles/styles.css
+++ b/cloudresweb/styles/styles.css
@@ -7,8 +7,10 @@ body {
     /*font-family: 'Roboto', 'Helvetica', sans-serif;*/
     background-color: var(--color-light);
     color: var(--color-dark);
-    margin: 40px;
-    overflow-x: hidden;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 40px;
+    line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
